--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		  <a class="nav-link color_nav" href="#">Artistas</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link color_nav" href="Contactus.html">Contactanos</a>
+			<a class="nav-link color_nav" href="contactus.html">Contactanos</a>
 		  </li>
 	  </ul>
 	</div>
