--- a/Contactus.html
+++ b/Contactus.html
@@ -18,7 +18,7 @@
     
     
     <nav class="navbar navbar-expand-lg">
-        <a href="/index.html" class="logo-nav">
+        <a href="index.html" class="logo-nav">
             <img src="img/logo.png" alt="logo" width="30px">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
