--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  <a class="nav-link color_nav" href="galeria.html">Galeria</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link color_nav" href="#">Cursos</a>
+		  <a class="nav-link color_nav" href="cursos.html">Cursos</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link color_nav" href="#">Artistas</a>
