--- a/galeria.html
+++ b/galeria.html
@@ -32,7 +32,7 @@
               <a class="nav-link color_nav" href="#">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link color_nav" href="#">Cursos</a>
+              <a class="nav-link color_nav" href="cursos.html">Cursos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link color_nav" href="#">Artistas</a>
