--- a/cursos.html
+++ b/cursos.html
@@ -35,7 +35,7 @@
               <a class="nav-link color_nav" href="#">Artistas</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link color_nav" href="/Contactus.html">Contactanos</a>
+                <a class="nav-link color_nav" href="Contactus.html">Contactanos</a>
               </li>
           </ul>
         </div>
